# brick-chat-example

./: Client.hs  GClient.hs  README.md  Server.hs  Shared.hs  chat.cabal  default.nix  shell.nix
src/: Shared.hs
